// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wrapper isCompressed should render the component with children 1`] = `
<div
  className="m-[0_auto] px-6 sm:px-4 max-w-[800px]"
>
  <h1>
    Some children
  </h1>
  <h2>
    Hello!
  </h2>
</div>
`;

exports[`Wrapper should render the component with children 1`] = `
<div
  className="m-[0_auto] max-w-4xl px-6 sm:px-4"
>
  <h1>
    Some children
  </h1>
  <h2>
    Hello!
  </h2>
</div>
`;
